--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* flex-wrap: wrap; */
+  flex-direction: row;
+}
+
+.card {
+  background-color: #fff;
+  box-shadow: 2px 5px 90px #f2f2f2;
+  width: 100%;
+  height: 600px;
+  margin: 10px;
+  border-radius: 4px;
+}
+
+.tilter {
+  text-align: left;
+  /* justify-self: start; */
+  font-size: 28px;
+  padding: 22px 0 0 22px;
+  font-weight: 700;
+}
+
+.tilter span {
+  font-size: 17px;
+  color: rgb(149, 147, 147);
+  font-weight: 600;
+}
+
+.tilter .box {
+  width: auto;
+  height: auto;
+  color: #fff;
+  font-size: 14px;
+  border-radius: 4px;
+  padding: 3px;
+  margin-left: 7px;
+  background-color: rgb(0, 218, 211);
+  display: inline-block;
+}
+
+.context {
+  text-align: left;
+  font-size: 15px;
+  color: rgb(147, 146, 146);
+  font-weight: 600;
+  padding: 0 0 42px 22px;
+}
+
+.question {
+  width: 200px;
+  height: 500px;
+}
+
+.question-container {
+  width: 100%;
+  height: 100%;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: rgba(51, 51, 51, 0);
+}
+
+.topnav a {
+  float: left;
+  color: #000;
+  text-align: center;
+  padding: 24px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.topnav a span {
+  font-size: 17px;
+  color: rgb(149, 147, 147);
+  font-weight: 500;
+}
+
+.topnav a.split {
+  float: right;
+  padding: 24px 16px;
+  border-radius: 4px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.topnav a.split i {
+  background-color: rgb(198, 198, 198);
+  padding: 1px 5px 0 5px;
+  color: rgb(242, 242, 242);
+  border-radius: 4px;
+  font-size: 15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card .size{
+  width: 700px;
+  margin: 30px 0 0 30%;
+}
+@media (max-width: 800px) {
+  .App {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .card .size{
+    width: 700px;
+    margin: 20px 0 0 5%;
   }
 }
